--- a/basketball-scoreboard/index.css
+++ b/basketball-scoreboard/index.css
@@ -1,22 +1,55 @@
-body {
-    margin: 0;
-    text-align: center;
+@font-face {
+    font-family: 'digital';
+    src: url(fonts/DS-DIGIb.TTF);
 }
 
-h4 {
+body {
+    margin-left: 200px;
+    margin-right: 200px;
+    text-align: center;
+    background: #08234f;
+}
+
+.counter {
     background: #0a0001;
+    border-radius: 10%;
     font-size: 90px;
     color: #F94F6D;
     width: 120px;
     margin: 20px;
+    font-family: 'digital';
+}
+
+.team{
+    font-size:40px;
+    color: aliceblue;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
 
 .container {
     display: flex;
     justify-content: space-around;
+    
+    
 }
 
 button {
     background: none;
+    color: aliceblue;
+    border-color: aliceblue;
+    font-family: 'digital';
+    width:40px;
+    height: 30px;
+    font-size: 20px;
+    border-radius: 20%;
 }
+
+#reset{
+    margin-top: 20px;
+    width: 80;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height: auto;
+}
+
 
