--- a/password-generator/index.css
+++ b/password-generator/index.css
@@ -1,3 +1,21 @@
+@font-face {
+    font-family: 'My Font';
+    src: url('fonts/Roboto-Thin.ttf') format('truetype');
+  }
+
 body {
     margin: 0;
+    background-color: #222B30;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h1{
+    font-size: 25px;
+}
+
+#subtitle{
+    font-size: 10px;
+    color:aliceblue;
+    font-family: 'My Font';
+    word-spacing: 100%;
 }
